--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo:wght@600&family=Permanent+Marker&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -22,31 +23,51 @@ body{
 }
 
 .text1{
-    font-size: 60px;
+    font-size: 8em;
     font-weight: 700;
     letter-spacing: 8px;
-    margin-bottom: 20px;
     color: #fff;
+    margin-bottom: -100px;
     background: #000;
     position: relative;
-    animation: text 3s 1;
+    animation: text 4s ease-in-out infinite alternate;
+    font-family: 'Exo', sans-serif;
 }
 .text2{
-    font-size: 30px;
+    font-size: 5em;
     color: #6ab04c;
+    font-family: 'Permanent Marker', cursive;
     animation: text2 3s ;
 }
 
 @keyframes text {
-    0%{
-        color: #000;
-        margin-bottom: -40px;
+    
+    50%{
+        letter-spacing: 20px;
+        margin-bottom: 0;
+        
     }
-    30%{
-        letter-spacing: 25px;
+    
+    
+}
+
+@media only screen and (max-width: 468px){
+    .text1{
+        font-size: 3em;
+        margin-bottom: -50px;
     }
-    85%{
-        letter-spacing: 8px;
-        margin-bottom: 20px;
+    .text2{
+        font-size:2em;
     }
+
+    @keyframes text {
+    
+        50%{
+            letter-spacing: 5px;
+            margin-bottom: 0;
+            
+        }
+        
+        
+    }    
 }
